# Luk-chan

./: .env.example  Dockerfile  README.md  discloud.config  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml
src/: _channels.py  _colors.py  _constants.py  _emojis.py  _logging.py  _roles.py  _settings.py  _setup_hook.py  _utils.py  bot.py
src/cogs/: __init__.py
src/cogs/commands/: admin.py  bpsr.py  leaderboard.py  owner.py  team.py
src/cogs/events/: member_event.py  nitro_event.py
src/components/: member_join.py  member_nitro.py  welcome.py
src/components/admin/: check_reactions.py
src/components/bpsr/: check_reactions.py  create_group.py
src/components/team/: create_group.py  edit_group.py
src/db/: _base.py  leaderboard.py
src/embeds/bpsr/: group_controller.py
src/embeds/team/: group_controller.py
